[tool.poetry]
name = "blog-backend"
version = "0.1.0"
description = ""
authors = ["Felipe Amador <felipedavidamador@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
